# ur3e_vegetable_sorting_ROS2_humble

./: .gitignore  .gitmodules  README.md  compose.yaml  third_party.repos
docker/: Dockerfile  entrypoint.sh
src/: *
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
src/moveit_config/launch/: bringup.launch.py
src/ur3e_moveit_config/: .setup_assistant  package.xml
src/ur3e_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
src/ur3e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur3e_pick_place/: package.xml  setup.cfg  setup.py
src/ur3e_pick_place/ur3e_pick_place/: pick_place_demo.py
src/ur3e_pick_place_mtc/: CMakeLists.txt  package.xml
src/ur3e_pick_place_mtc/config/: pick_place_mtc_parameters.yaml
src/ur3e_pick_place_mtc/include/ur3e_pick_place_mtc/: pick_place_task.h  scene_utils.h  task_common.h
src/ur3e_pick_place_mtc/launch/: bringup_gz_and_mtc.launch.py  complete_pick_place_system.launch.py  pick_place_mtc.launch.py
src/ur3e_pick_place_mtc/src/: pick_place_main.cpp  pick_place_mtc.cpp  pick_place_task.cpp  pick_place_trial.cpp  scene_utils.cpp
src/ur3e_robotiq_description/: CMakeLists.txt  package.xml
src/ur3e_robotiq_description/launch/: view_ur3e_robotiq.launch.py
src/ur3e_robotiq_description/rviz/: ur_config.rviz
src/ur3e_robotiq_description/urdf/: ur3e_moveit.urdf.xacro  ur3e_moveit_full.urdf  ur3e_robotiq_macro.xacro  ur3e_with_robotiq.urdf.xacro
src/ur3e_robotiq_gz_sim/: CMakeLists.txt  package.xml
src/ur3e_robotiq_gz_sim/config/: initial_positions.yaml  ur3e_robotiq_ros2_controllers.yaml
src/ur3e_robotiq_gz_sim/launch/: bringup_pick_place_mtc_all_in_one.launch.py  conveyor_pick_place.launch.py  gz.launch.py  gz_moveit_pick_place.launch.py  gz_moveit_ur3e_robotiq_camera.launch.py  gz_spwan_ur3e_robotiq_camera.launch.py  peg_demo.launch.py  real_moveit_pick_place.launch.py  spwan_ur3e_robotiq_camera.launch.py  try_moveit_pick_place.launch.py  view_ur_robotiq_camera.launch.py
src/ur3e_robotiq_gz_sim/models/conveyor/: model.sdf
src/ur3e_robotiq_gz_sim/models/cube/: model.sdf
src/ur3e_robotiq_gz_sim/rviz/: rviz.rviz  ur_robotiq_camera_config.rviz
src/ur3e_robotiq_gz_sim/scripts/: box_spawner.py  conveyor_pick_place_script.py  cube_conveyor_node.py  peg_pick_insert_demo.py
src/ur3e_robotiq_gz_sim/src/: pick_place.cpp  real_pick_place.cpp  test_ik.cpp  test_ik_collision_obj.cpp
src/ur3e_robotiq_gz_sim/urdf/: gz_robotiq_gripper.macro.urdf.xacro  gz_ur_robotiq.ros2_control.xacro  gz_ur_robotiq_camera.urdf.xacro  ur3e_ros2_control.xacro  ur3e_with_robotiq_gz.urdf.xacro
src/ur3e_robotiq_gz_sim/worlds/: conveyor.sdf  conveyor_base.sdf  empty.sdf  peg_in_hole_demo.sdf  pick_place_table_world.sdf
